:hammer: Adding application plugin and configs to build script