@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
     id 'org.jetbrains.kotlin.jvm' version '1.4.32'
     id 'com.github.ben-manes.versions' version '0.38.0'
     id 'com.github.johnrengelman.shadow' version '6.1.0' // building fat jars
@@ -8,7 +9,17 @@ plugins {
 sourceCompatibility = '16'
 version '0.5.0'
 
-def mainClass = 'com.dansoftware.boomega.main.Main'
+mainClassName = 'com.dansoftware.boomega.main.Main'
+applicationDefaultJvmArgs = [
+        '--add-exports', 'javafx.base/com.sun.javafx=ALL-UNNAMED',
+        '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+        '--add-exports', 'javafx.base/com.sun.javafx=ALL-UNNAMED',
+        '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.skin.resources=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+]
 
 compileKotlin {
     kotlinOptions {
@@ -125,6 +136,6 @@ shadowJar {
     exclude 'junit/**'
     exclude 'module-info.class'
 
-    manifest.attributes('Main-Class': mainClass)
+    manifest.attributes('Main-Class': mainClassName)
 }
 
